[tool.poetry]
name = "landscape-analysis-toolbox"
version = "0.1.0"
description = "Toolbox for fitness landscape analysis."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.3"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
numpy = "^2.0.1"
plotly = "^5.23.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.29.3"
nbformat = "^5.10.3"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
